# neutAna

./: .gitignore  CMakeLists.txt  makeNeutAna.ps1  runNeutDir.sh
comb_rtd/: neutrinoComb.cpp
data_rtd/: makeResetVsE.C
jsons/: 1k_rtd_data_200-210.json  neutAna.json  test.json  tiledf.json  tiledf05_10x14.json  tiledf_long.json  tiledf_neut.json
scripts/: moveImages.ps1  neutGraphs.py  neutMakeJson.py  neutrinoAna.py  neutrinoAnaMp.py  rootMacros.py
simulation-software/: QpixAsic.py  QpixAsicArray.py  QpixMPAnalysis.py  QpixTest.py  Untitled.ipynb  forceMake.py  runqp.py
simulation-software/notebooks/: 1ks_analysis.ipynb  ArrayNotebook.ipynb  ArrayTiming.ipynb  neutrinosAna.ipynb  neutrinosCombAna.ipynb  test.ipynb
source/: CMakeLists.txt  fixHadNeutrino.cpp  leptonWeights.hpp  neutAna.cpp  neutAna.hpp  neutGraphs.cpp  neutrinoCombRam.cpp  neutrinoFilt.cpp  temp.cpp  updateEnergyDeposit.C
